force-app/main/default/objects/Client_Health_Report__c/Client_Health_Report__c.object-meta.xml
<CustomObject>
    <label>Client Health Report</label>
    <nameField>
        
        <displayFormat>{00000000}</displayFormat>
        
        <label>Monthly Client Report Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Client Health Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>