force-app/main/default/objects/Client_Health_Report__c/fields/Accounting_Score__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Score__c</fullName>
    <inlineHelpText>Scale 1-10, 10 is ideal and 1 is the worst</inlineHelpText>
    <label>Accounting Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>