force-app/main/default/objects/Client_Health_Report__c/fields/BlueWave_Rating__c.field-meta.xml
<CustomField>
    <fullName>BlueWave_Rating__c</fullName>
    <inlineHelpText>Scale 1-10, Perch&apos;s perception of the current client relationship</inlineHelpText>
    <label>Perch Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>