force-app/main/default/objects/Client_Health_Report__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Monthly_Client_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>