force-app/main/default/objects/Client_Health_Report__c/fields/Client_DSO__c.field-meta.xml
<CustomField>
    <fullName>Client_DSO__c</fullName>
    <formula>IF(Clients_Invoiced__c &lt;= 0, 0, (Clients_Beginning_Balance__c + Clients_Invoiced__c - Clients_Payments__c)/(Clients_Invoiced__c/30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from Customer Invoiced, Payments and Beginning Balance fields</inlineHelpText>
    <label>Client: DSO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>