force-app/main/default/objects/Client_Health_Report__c/fields/Client_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Score__c</fullName>
    <label>Client Health Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>