force-app/main/default/objects/Client_Health_Report__c/fields/Client_Health_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Health_Score_Name__c</fullName>
    <formula>Client_Account__r.Name &amp; &apos; - &apos; &amp;
CASE(
  MONTH(End_Date__c),
  1, &quot;January&quot;,
  2, &quot;February&quot;,
  3, &quot;March&quot;,
  4, &quot;April&quot;,
  5, &quot;May&quot;,
  6, &quot;June&quot;,
  7, &quot;July&quot;,
  8, &quot;August&quot;,
  9, &quot;September&quot;,
  10, &quot;October&quot;,
  11, &quot;November&quot;,
  12, &quot;December&quot;,
  &quot;&quot;
) &amp; &apos; &apos; &amp;
TEXT(Year(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Health Score Name</label>
    <type>Text</type>
</CustomField>