force-app/main/default/objects/Client_Health_Report__c/fields/Clients_Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Clients_Beginning_Balance__c</fullName>
    <label>Clients: Beginning Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>