force-app/main/default/objects/Client_Health_Report__c/fields/Clients_Payments__c.field-meta.xml
<CustomField>
    <fullName>Clients_Payments__c</fullName>
    <label>Clients: Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>