force-app/main/default/objects/Client_Health_Report__c/fields/Customer_DSO__c.field-meta.xml
<CustomField>
    <fullName>Customer_DSO__c</fullName>
    <formula>IF(Customers_Invoiced__c &lt;= 0, 0, (Customers_Beginning_Balance__c + Customers_Invoiced__c - Customers_Payments__c)/(Customers_Invoiced__c/30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from Customer Invoiced, Payments and Beginning Balance fields</inlineHelpText>
    <label>Customer: DSO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>