force-app/main/default/objects/Client_Health_Report__c/fields/Customers_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Customers_Invoiced__c</fullName>
    <label>Customers: Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>