force-app/main/default/objects/Client_Health_Report__c/fields/Customers_Payments__c.field-meta.xml
<CustomField>
    <fullName>Customers_Payments__c</fullName>
    <label>Customers: Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>