force-app/main/default/objects/Client_Health_Report__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Last day of month</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>