force-app/main/default/objects/Client_Health_Report__c/fields/Management_Projects_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Management_Projects_Utilization__c</fullName>
    <inlineHelpText>Percent of projects that are currently subscribed (sum of current allocation schedule)</inlineHelpText>
    <label>Management Projects: Utilization</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>