force-app/main/default/objects/Client_Health_Report__c/fields/MW_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>MW_Under_Management__c</fullName>
    <inlineHelpText>Sum of Projects that are currently billing (where we expect utilization to be close to 100%)</inlineHelpText>
    <label>MW Under Management</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>