force-app/main/default/objects/Client_Health_Report__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <inlineHelpText>Scale 1-10</inlineHelpText>
    <label>NPS</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>