force-app/main/default/objects/Client_Health_Report__c/fields/NPS_Class__c.field-meta.xml
<CustomField>
    <fullName>NPS_Class__c</fullName>
    <formula>IF(NPS__c &gt; 8, &quot;Promoter&quot;, IF(NPS__c &gt; 6, &quot;Passive&quot;, IF(NPS__c &gt; 0, &quot;Detractor&quot;, &quot;&quot;)))</formula>
    <inlineHelpText>Calculated from NPS field</inlineHelpText>
    <label>NPS Class</label>
    <type>Text</type>
</CustomField>