force-app/main/default/objects/Client_Health_Report__c/fields/Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Cases__c</fullName>
    <inlineHelpText>Cases open with client (outstanding requests)</inlineHelpText>
    <label>Open Cases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>