force-app/main/default/objects/Client_Health_Report__c/fields/Recalculate_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Health_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Health Score</label>
    <type>Checkbox</type>
</CustomField>