force-app/main/default/objects/Client_Health_Report__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>First day of month</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>